[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"

[project]
name="mercurytools"
dynamic=["version"]
description="a lightweight and consistent data structures library"
readme="README.md"
license="MIT"
license-files=["LICENSE"]
authors=[{name="Walter Michel Raja", email="waltermichelraja@gmail.com"}]
maintainers=[{name="Walter Michel Raja", email="waltermichelraja@gmail.com"}]
classifiers=[
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage="https://github.com/waltermichelraja/mercurytools"

[project.scripts]
mercurytools="mercurytools.cli.main:main"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.dynamic]
version={attr="mercurytools.__version__.__version__"}